# takahe-operator

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  charmcraft.yaml  pyproject.toml  requirements-format.txt  requirements-integration.txt  requirements-lint.txt  requirements-static.txt  requirements-unit.txt  requirements.txt  tox.ini
src/: charm.py
tests/integration/: test_charm.py
tests/scenario/: test_charm.py
tests/unit/: test_charm.py
